pkg/ibmvpc/examples/out/explain_out/LBToResIPNode_all_vpcs_explain_detail.txt
Explaining connectivity from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca to 192.168.32.5 within ky-test-vpc
Interpreted source: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22], kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22], kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255], kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22], kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168 [...]
Interpreted destination: iks-clusterid:1[192.168.32.5]
=================================================================================================================

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.36.6] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: outbound, name: allow-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LB private IP][192.168.40.6] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: outbound, name: allow-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-private-2-others-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.0.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			direction: outbound, name: allow-traffic-subnet-edge-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 192.168.32.0/20, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.16.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: outbound, name: allow-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.20.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: outbound, name: allow-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-edge-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.24.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: outbound, name: allow-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection
Ingress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.32.0-192.168.32.4,192.168.32.6-192.168.35.255] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767

	Ingress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-private-2-others-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.4.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			direction: outbound, name: allow-traffic-subnet-edge-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 192.168.32.0/20, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------

No connections from kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] to iks-clusterid:1[192.168.32.5];
connection is blocked due to load balancer initiation

Load Balancer: kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member
Egress: security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection; network ACL ky-test-private-2-others-acl allows connection
Ingress: network ACL ky-test-edge-acl allows connection; security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection

Path:
	kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[Potential LB private IP][192.168.8.0/22] |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Load Balancer:
		kube-clusterid:1-8fdd1d0a2ce34deba99d0f885451b1ca[LoadBalancer] will not connect to iks-clusterid:1[192.168.32.5], since it is not its pool member

	Egress:
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: outbound, id: id:277, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 30000-32767
			direction: outbound, id: id:279, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 30000-32767
		network ACL ky-test-private-2-others-acl allows connection with the following allow rules
			direction: outbound, name: allow-traffic-subnet-edge-outbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 192.168.32.0/20, conn: all

	Ingress:
		network ACL ky-test-edge-acl allows connection with the following allow rules
			direction: inbound, name: allow-inbound, priority: 1, action: allow, source: 0.0.0.0/0 , destination: 0.0.0.0/0, conn: all
		security group kube-r006-d7cfb31a-1d4b-40c8-83df-ce2e6f8f2e57 allows connection with the following allow rules
			direction: inbound, id: id:281, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: tcp,  dstPorts: 1-65535
			direction: inbound, id: id:283, remote: 0.0.0.0/0, local: 0.0.0.0/0, conns: protocol: udp,  dstPorts: 1-65535

------------------------------------------------------------------------------------------------------------------------
